--- a/sty.css
+++ b/sty.css
@@ -53,7 +53,7 @@ body {
 ._box {
   position: relative;
 }
-._box  {
+._box {
   height: 100%;
   box-sizing: border-box;
 }
@@ -86,22 +86,64 @@ body {
   width: 100vw;
   position: absolute;
   top: 0;
-  background-color: #a29f87;
+  background: content-box radial-gradient(rgb(237, 217, 221),rgb(23, 22, 22));
 }
 .p-box {
   width: 100%;
   padding-top: 100%;
 }
+
 .mask {
+  background: content-box radial-gradient(rgb(237, 217, 221), skyblue);
+  border-color: #0029f4;
   width: 100%;
   height: 100%;
   z-index: 10;
   cursor: pointer;
   position: absolute;
-  background-color: #a29f87;
+  /* background-color: #a29f87;- */
   opacity: 0;
   transition: all 0.5s;
 }
-.hidden{
-    opacity: 1;
+.hidden {
+  opacity: 0.5;
+}
+
+.loss {
+  justify-content: center;
+  align-items: center;
+
+  color: #030303;
+}
+
+.overlay-text {
+  z-index: 100;
+  display: none;
+  position: fixed;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: black;
+  font-size: 2em;
+  font-family: sans-serif;
+  transition: background-color 500ms, font-size 500ms;
+}
+
+.overlay-text-small {
+  font-size: 0.3em;
+}
+
+._button {
+  padding: 8.9px 11px;
+  font-size: 16px;
+  background-color: #fff;
+  border: 1px solid #d9d9d9;
+  border-radius: 10px;
+  width: 50%;
+  margin-bottom: 15px;
+  margin-left: 50px;
+}
+.overlay-text.visible {
+  display: flex;
+  animation: overlay-grow 500ms forwards;
 }
